# DeepFilter

./: MyLogger.py  README.md  call.py  call_all.py  call_somatic.py  compare_filter_res_indel.py  compare_filter_res_snv.py  convert.py  data_instruction.md  data_loader.py  execute.py  features.py  nn_net.py  run.py  run.sh  snv_test_weight_result  somatic_data_loader.py  test_net.py  test_weight.sh  test_weight_result  train.py  train_somatic.py  train_somatic.sh
cmd/: call_all.sh  call_germline.sh  call_somatic.sh  checking.sh  run.sh  test_weight.sh  train_germline.sh  train_somatic.sh
cpp/: CMakeLists.txt  deepfilter.cpp
models/: checkpoint_indel_w1_24.adam.pth  checkpoint_snv_w1_24.adam.pth
utils/: Global.py  vcf_writer.py
